cmake_minimum_required (VERSION 2.6)
SET (CMAKE_CXX_COMPILER g++)
SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fPIC -g -Wall -ltbb -fopenmp")
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/Bin)


AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR} BICGSTAB_SRC)

ADD_EXECUTABLE(BICGSTAB ${BICGSTAB_SRC})