cmake_minimum_required (VERSION 2.6)
SET (CMAKE_CXX_COMPILER g++)

SET (CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -std=c++11 -O3 -ltbb ")
SET (CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -std=c++11 -O0 -g -pg -ltbb ")

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/Bin)


AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR} BICGSTAB_SRC)

ADD_EXECUTABLE(BICGSTAB ${BICGSTAB_SRC})